# faker-data-generation-project

./: .gitignore  PROJECT_JOURNAL.md  README.md  pyproject.toml
.dg/: telemetry.yaml
.tmp_dagster_home__w4f4frk/history/: runs.db
.tmp_dagster_home__w4f4frk/history/runs/: .db  01118a19-0f41-47c9-ab7e-c3e19cdb5462.db  022bf2a2-4427-4d7a-97c0-111840d2b994.db  038ffaf5-cbe3-4ee3-9704-3d89ac4f115e.db  0448c9e6-6684-4af7-b0c7-5e8d22163ddf.db  0646f9f4-c78c-40a6-bd63-eb73cb4a909c.db  075c080d-ed47-4975-94ed-f3df7fbef1ee.db  075d8ad1-7f59-4cfc-8ae7-294d01219d9d.db  0b320140-554f-4e36-beda-3d63fdd07113.db  0d13bcfd-8a87-4de6-9c3b-38eba7cabcaa.db  0d9fcf60-2924-457a-89f0-86fa20d8bc06.db  0e02124c-3bec-4eae-813f-b472d06f1377.db  0ec9a7ef-ac2a-4b64-965e-1b0bf2851fa4.db  (+251 more)
.tmp_dagster_home__w4f4frk/schedules/: schedules.db
.tmp_dagster_home_afrzow84/history/: runs.db
.tmp_dagster_home_afrzow84/schedules/: schedules.db
.tmp_dagster_home_cjjz5npl/history/: runs.db
.tmp_dagster_home_cjjz5npl/schedules/: schedules.db
.tmp_dagster_home_geiu__rr/history/: runs.db
.tmp_dagster_home_geiu__rr/schedules/: schedules.db
.tmp_dagster_home_r4f4gn0y/history/: runs.db
.tmp_dagster_home_r4f4gn0y/schedules/: schedules.db
.tmp_dagster_home_vox5wga5/history/: runs.db
.tmp_dagster_home_vox5wga5/schedules/: schedules.db
.tmp_dagster_home_vox5wga5/storage/: generate_personnel_data
data/raw/: customer_data.csv  database.duckdb  extracted_data.csv  extracted_data_table.ipynb  product_dataset.ipynb
src/faker_data_generation_project/: definitions.py
(+310 files in other folders)
