[project]
name = "faker_data_generation_project"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.14",
    "faker==40.31.0",
    "faker-ecommerce-provider==1.2.0",
    "duckdb",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "dagster-duckdb>=0.29.14",
    "dagster-duckdb-pandas>=0.29.14",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "faker_data_generation_project"
registry_modules = [
    "faker_data_generation_project.components.*",
]


